[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unit-tester"
version = "0.1.0"
description = "Language-agnostic unit test generation framework using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.4",
  "openai>=1.40.0",
  "tenacity>=8.3.0",
  "python-dotenv>=1.0.1",
  "pathspec>=0.12.1",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
unit-tester = "unit_tester.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["unit_tester*"]
exclude = ["tests*"]


